# chowdy

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  LICENSE  README.md  todo.txt
cli/: CMakeLists.txt  main.cpp
cmake/: CompileOptions.cmake
common/: CMakeLists.txt  config.cpp  config.hpp  encoding.cpp  encoding.hpp  ipc.cpp  ipc.hpp  logging.cpp  logging.hpp  peer_cred.cpp  peer_cred.hpp  secure_buffer.hpp
daemon/: CMakeLists.txt  camera.cpp  camera.hpp  enroll_session.cpp  enroll_session.hpp  enrollment_store.cpp  enrollment_store.hpp  main.cpp  models.cpp  models.hpp  pipeline.cpp  pipeline.hpp  server.cpp  server.hpp
daemon/handlers/: auth.cpp  auth.hpp  enroll.cpp  enroll.hpp  list_remove.cpp  list_remove.hpp  test.cpp  test.hpp
etc/chowdy/: config.toml.example
etc/fastauth/: config.toml.example
models/: README.md
packaging/arch/: .SRCINFO  PKGBUILD  README.md  chowdy.install  fastauth.install
pam/: CMakeLists.txt  README.md  pam_chowdy.c  pam_fastauth.c
proto/: CMakeLists.txt  messages.hpp
systemd/: README.md  chowdyd.service  chowdyd.socket  fastauthd.service  fastauthd.socket
systemd/tmpfiles.d/: chowdy.conf  fastauth.conf
tools/: CMakeLists.txt  install-dev.sh  m1_capture_test.cpp  m2_detect_test.cpp  m3_pipeline_test.cpp  reinstall-dev.sh  release.sh  uninstall-dev.sh
